# Alice-00

./: .gitignore  .gitmodules  AliceProfile-Runtime.json  CMakeLists.txt  LICENSE  README.md  README.zhCN.md  imgui.ini
assets/scenes/: Example.ascene
assets/shaders/: Circle.glsl  FlatColor.glsl  Quad.glsl  Texture.glsl
bats/: Build.bat  Compile.bat
commands/: Compile.bat  Run.bat
scripts/: Build.bat  README.md  Run.bat
src/: Main.cpp
src/Alice/: Alice.hpp  CMakeLists.txt  PCH.hpp  pch.hpp
src/Alice/Application/: Application.cpp  Application.hpp  CMakeLists.txt
src/Alice/Common/: CMakeLists.txt  FileHelper.hpp  ParticleSystem.cpp  PathHelper.hpp  Random.hpp  Timer.hpp
src/Alice/Core/: Alice.hpp  Base.hpp  CMakeLists.txt  Core.hpp  Input.hpp  MouseButtonCodes.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  PCH.hpp  Timestep.hpp  UUID.cpp  UUID.hpp  Window.hpp
src/Alice/Core/Application/: Application.cpp  Application.hpp
src/Alice/Core/Events/: ApplicationEvent.hpp  Event.hpp
src/Alice/Core/Input/: Input.hpp  KeyCodes.hpp  MouseButtonCodes.hpp
src/Alice/Core/Layer/: Layer.hpp  LayerStack.hpp
src/Alice/Core/Log/: Log.hpp
src/Alice/Core/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
src/Alice/Core/Platform/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
src/Alice/Core/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp
src/Alice/Core/Window/: Window.hpp
src/Alice/Debug/: Instrumentor.hpp
src/Alice/Events/: ApplicationEvent.hpp  CMakeLists.txt  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/Alice/ImGUI/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.hpp
src/Alice/Input/: Input.hpp
src/Alice/Layer/: CMakeLists.txt  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
src/Alice/Log/: CMakeLists.txt  Log.cpp  Log.hpp
src/Alice/Math/: CMakeLists.txt  Math.cpp  Math.hpp
src/Alice/Platform/: CMakeLists.txt
src/Alice/Platform/OpenGL/: CMakeLists.txt  ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererApi.cpp  OpenGLRendererApi.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
src/Alice/Platform/Windows/: CMakeLists.txt  WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
src/Alice/Renderer/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.hpp  EdirotCamera.cpp  EditorCamera.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererApi.cpp  RendererApi.hpp  Shader.cpp  Shader.hpp  SubTexture2D.cpp  SubTexture2D.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/Alice/Scene/: CMakeLists.txt  Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptableEntity.hpp
src/Alice/Time/: Timestep.hpp
src/Alice/UI/: CMakeLists.txt  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
src/Alice/Utils/: CMakeLists.txt  FileDialogs.hpp  FileHelper.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Random.cpp
src/Alice/Window/: CMakeLists.txt  Window.hpp
src/Editor/: CMakeLists.txt  EditorApp.hpp  EditorLayer.cpp  EditorLayer.hpp
src/Editor/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
src/Sandbox/: CMakeLists.txt  Sandbox2D.cpp  Sandbox2D.hpp  SandboxApp.hpp
